--- a/VERAlinktree/styles.css
+++ b/VERAlinktree/styles.css
@@ -6,7 +6,9 @@
 
 body {
     font-family: Arial, sans-serif;
-    background-color: #d5e0d5;
+    background-color: #EEBBAA;
+    background-color: #52583E;
+    /* background-color: #bfa185; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -16,7 +18,9 @@ body {
 
 .container {
     text-align: center;
-    background: #d5e0d5;
+    /* background: #52583E; */
+    /* background: #EEBBAA; */
+    background: #bfa185;
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -65,6 +69,7 @@ h1 {
 .links a {
     display: block;
     padding: 10px;
+    background: white;
     background: white;
     color: #000;
     text-decoration: none;
